welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: value tolnt is not a member of String
		val b = litMessage().tolnt
                                     ^